--- a/src/login.css
+++ b/src/login.css
@@ -1,19 +1,21 @@
-.App {
+@import '~antd/dist/antd.css';
+
+.login {
   text-align: center;
 }
 
-.App-logo {
+.login-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .login-logo {
+    animation: login-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
+.login-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -24,15 +26,19 @@
   color: white;
 }
 
-.App-link {
+.login-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+@keyframes login-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
+}
+
+.button {
+  color: #AC9A58;
 }
