--- a/src/index.css
+++ b/src/index.css
@@ -18,10 +18,12 @@ code {
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
+
 .sidebar-item {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: fit-content;
 }
 
 .sidebar-item-content {
