--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ code {
 }
 
 .sidebar {
+  /* display: inline-block; */
   max-width: 240px;
   height: 100vh;
   border: 1px solid rgba(0, 0, 0, 0.1);
